--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 /* Typography ----------------------------------------*/
 
 @import url("https://fonts.googleapis.com/css2?family=Girassol&family=Oxygen:wght@300;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Londrina+Outline&display=swap");
 
 /* Normalize - HTML ----------------------------------------*/
 html,
@@ -53,6 +54,41 @@ h6 {
 p {
   text-align: justify;
 }
+input[type="text"] {
+  background-color: transparent;
+  font-family: "Oxygen", sans-serif;
+  font-size: 14px;
+  border-width: 0 0 1px 0;
+  border-style: dotted;
+  padding: 4px;
+  margin: 4px 0px;
+  outline: none;
+}
+select {
+  margin: 0 4px;
+  border: 1px solid;
+  font-family: "Oxygen", sans-serif;
+  font-size: 14px;
+  outline: none;
+}
+button {
+  font-family: "Oxygen", sans-serif;
+  font-size: 14px;
+  border-radius: 28px;
+  border: 1px solid;
+  display: inline-block;
+  cursor: pointer;
+  padding: 8px 12px;
+  text-decoration: none;
+  outline: none;
+  margin: 0px 4px;
+  transition: 0.2s;
+}
+button:hover {
+  opacity: 0.5;
+  /* padding: 8px 11px;
+  font-weight: 700; */
+}
 
 /* Normalize - React ----------------------------------------*/
 
@@ -60,6 +96,7 @@ p {
 
 .deco-text {
   font-family: "Girassol", cursive;
+  /* font-family: "Londrina Outline", cursive; */
   font-size: 2em;
   margin: 0;
 }
@@ -136,16 +173,21 @@ p {
 
 /* Per-Component ----------------------------------------*/
 
+.header {
+  height: 86px;
+  border-bottom: 1px solid #656565;
+}
 .header-logo-container {
   padding: 8px 16px;
-  width: 100px;
+  /* width: 100px; */
 }
 .header-text-container {
   padding: 12px 16px;
   font-size: 2em;
+  /* text-decoration: underline; */
 }
-.header {
-  border-bottom: 1px solid #656565;
+.header-menu-container {
+  padding: 8px 16px;
 }
 .card {
   background-color: #ffffff;
@@ -163,13 +205,20 @@ p {
     padding: 0px;
     width: 100%;
   }
+  .header {
+    height: 48px;
+  }
   .header-logo-container {
-    padding: 16px 16px;
-    width: 66px;
+    padding: 4px;
+    height: 40px;
   }
   .header-text-container {
-    padding: 18px 8px;
+    padding: 4px 8px;
     font-size: 1em;
+  }
+  .header-menu-container {
+    padding: 8px;
+    height: 32px;
   }
 }
 /* Extra small devices (phones, 600px and down) */
@@ -178,12 +227,20 @@ p {
     padding: 4px;
     width: 100%;
   }
+  .header {
+    height: 64px;
+  }
   .header-logo-container {
-    padding: 18px 16px;
+    padding: 12px 16px;
+    height: 40px;
   }
   .header-text-container {
-    padding: 24px 8px;
+    padding: 8px 8px;
     font-size: 1.5em;
+  }
+  .header-menu-container {
+    padding: 12px;
+    height: 40px;
   }
 }
 
