--- a/src/App.css
+++ b/src/App.css
@@ -191,7 +191,7 @@ button:hover {
 }
 .card {
   background-color: #ffffff;
-  padding: 24px;
+  padding: 24px 32px;
   margin: 12px;
   border: 1px solid #656565;
   border-radius: 8px;
