--- a/src/App.css
+++ b/src/App.css
@@ -60,9 +60,11 @@ input[type="text"] {
   font-size: 14px;
   border-width: 0 0 1px 0;
   border-style: dotted;
+  border-color: #5386e4;
   padding: 4px;
   margin: 4px 0px;
   outline: none;
+  width: 100%;
 }
 select {
   margin: 0 4px;
@@ -196,6 +198,18 @@ button:hover {
   border: 1px solid #656565;
   border-radius: 8px;
 }
+.answer-line {
+  width: 100%;
+  line-height: 2.5em;
+}
+.answer-number-container {
+  display: inline-block;
+  width: 2em;
+}
+.answer-input-container {
+  display: inline-block;
+  width: 80%;
+}
 
 /* Responsiveness ----------------------------------------*/
 
@@ -235,7 +249,7 @@ button:hover {
     height: 40px;
   }
   .header-text-container {
-    padding: 8px 8px;
+    padding: 0px 8px;
     font-size: 1.5em;
   }
   .header-menu-container {
